# NTMM

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_STATUS.md  HANDOFF.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  MODELS_STATE_OF_THE_ART_COMPLETE.md  PROJECT_READINESS_REPORT.md  PROJECT_SUMMARY.md  PUBLICATION_CHECKLIST.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_FIX.md  README.md  SECURITY.md  STATE_OF_THE_ART_ENHANCEMENTS.md  mcp.json  pyproject.toml  requirements.txt  run_all_steps.sh  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
.kiro/specs/publication-readiness/: design.md
docs/: DEPLOYMENT.md  FAQ.md  MODEL_ARCHITECTURE.md
examples/: README.md  advanced_distillation_example.py  advanced_training_example.py  inference_example.py
specs/publication-readiness/: requirements.md
src/: __init__.py  advanced_distillation.py  advanced_training.py  dataset_adapters.py  distil_student.py  distillation_utils.py  embedding_utils.py  evaluate_student.py  model_card_template.py  optimize_model.py  prepare_data.py  run_pipeline.py  train_teacher.py
tests/: __init__.py  test_config_and_imports.py  test_dataset_adapters.py  test_model_card.py
